# stellarwallet

./: .gitignore  Cargo.toml  README.md  package.json  wrangler.toml
.github/workflows/: ci.yml
contracts/aid_router/: Cargo.toml
contracts/aid_router/src/: lib.rs  test.rs
contracts/recipient_registry/: Cargo.toml
contracts/recipient_registry/src/: lib.rs  test.rs
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/tests/: integration.test.ts  utils.test.ts
frontend/src/utils/: math.ts  uiController.ts  wallet.ts
mishraadi123_copied/.github/workflows/: ci.yml
mishraadi123_copied/contracts/aether_pool/src/: test.rs
mishraadi123_copied/frontend/src/core/stellar/: formatter.test.mjs
